--- a/src/css/patternfly.css
+++ b/src/css/patternfly.css
@@ -887,7 +887,7 @@ a {
     transform: rotate(360deg);
   }
 }
-* .fa-rotate-90 {
+/* * .fa-rotate-90 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
   transform: rotate(90deg);
 }
@@ -910,7 +910,7 @@ a {
 * .fa-flip-horizontal.fa-flip-vertical {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1)";
   transform: scale(-1, -1);
-}
+} */
 * :root .fa-rotate-90,
 * :root .fa-rotate-180,
 * :root .fa-rotate-270,
