--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -1,16 +1,47 @@
+/* CSS GLOBAL RESET */
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   text-decoration: none;
+}
+
 /* GLOBAL RULES - COLOR TEMPLATE - MASTER CONTROL CSS */
 :root {
+   /* Global Page Padding */
+   padding: 2px;
+
    /* FONT - ROBOTO*/
    font-family: "Open Sans", sans-serif;
    font-family: "Roboto", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.7;
+   color: #fcfcfc;
 
-   /*GLOBAL THEME*/
-   --primary-color: #3a3a3a;
-   --secondary-color: #666666;
-   --tertiary-color: #666666;
-   --quarternary-color: teal;
-   --quinary-color: purple;
-   --bg-dark: #535c5c;
+   /* 
+   ALABASTER THEME
+   #fcfcfc --- Alabaster
+   #eceef5 --- Whisper
+   #ccccd3 --- Ghost
+   #f4f4fb --- White Lilac
+   #f4fvfv --- Aqua Spring 
+   #353535 --- Dark Grey
+   */
+
+   /* FONT - SIZES */
+   --sm-font: 12px;
+   --md-font: 16px;
+   --lg-font: 22px;
+
+   /*GLOBAL COLOR THEME*/
+   --primary-color: #fcfcfc;
+   --secondary-color: #eceef5;
+   --tertiary-color: #ccccd3;
+   --quarternary-color: #f4f4fb;
+   --quinary-color: #f4fcfc;
+   --bg-color: #353535;
+   --font-color: #353535;
 
    /*LINK COLORS*/
    --nav-link-bg-color: green;
@@ -18,7 +49,7 @@
    --link-color: #6a6a6a;
    --link-shadow-color: #000000;
    --nav-hover-color: #000000;
-   --link-highlight: green;
+   --link-highlight: red;
    --nav-item-bg-color: teal;
 
    /*SHADOW COLORS*/
