--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -11,6 +11,8 @@
    background-color: #00161d;
    justify-content: space-between;
    align-items: center;
+   border-color: #eef0f2;
+   border: 2px;
 }
 
 .nav-ul {
@@ -28,22 +30,23 @@
    justify-content: center;
 }
 
+.nav-link {
+   color: hsla(333, 100%, 53%, 0.901);
+   letter-spacing: 0.2em;
+   z-index: 200;
+   transition: all 0.2s;
+}
+
 .nav-link:hover {
-   text-transform: uppercase;
+   /* text-transform: uppercase; */
+   text-shadow: 0px 0px 13px black;
    transition: 0.5s;
    -moz-transform: scale(1.1);
    -webkit-transform: scale(1.1);
    -o-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -webkit-transform: scale(1.1);
-   transform: scale(1.4);
+   transform: scale(1.1);
    transition: all 0.2s;
    width: 100%;
-}
-
-.nav-link {
-   color: hsla(333, 100%, 53%, 0.901);
-   letter-spacing: 0.2em;
-   z-index: 200;
-   transition: all 0.2s;
 }
