--- a/src/css/FootBar.css
+++ b/src/css/FootBar.css
@@ -8,6 +8,7 @@
    padding-top: 2px;
    font-size: 14px;
    transition: 0.3s;
+   box-shadow: 0px 0px 5px black inset;
 }
 
 .footer-ul {
@@ -36,7 +37,7 @@
 
 .footer-icon:hover {
    cursor: pointer;
-   text-shadow: 0px 0px 2px rgb(0, 214, 252);
+   /* text-shadow: 0px 0px 2px rgb(0, 214, 252); */
    -moz-transform: scale(1.15);
    -webkit-transform: scale(1.15);
    -o-transform: scale(1.15);
