--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -13,6 +13,7 @@
    align-items: center;
    border-color: #eef0f2;
    border: 2px;
+   box-shadow: 0px 0px 2px black inset;
 }
 
 .nav-ul {
@@ -38,15 +39,15 @@
 }
 
 .nav-link:hover {
-   /* text-transform: uppercase; */
-   text-shadow: 0px 0px 13px black;
+   /* text-shadow: 0px -28px 25px rgb(232, 36, 36); */
+   stroke: solid 15px;
    transition: 0.5s;
    -moz-transform: scale(1.1);
    -webkit-transform: scale(1.1);
    -o-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -webkit-transform: scale(1.1);
-   transform: scale(1.1);
-   transition: all 0.2s;
+   transform: scale(1.5);
+   transition: all ease-out 0.1s;
    width: 100%;
 }
