--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -19,8 +19,7 @@
    */
 
    /* Global Page Padding */
-   padding-top: 5px;
-   /* padding-right: 5px; */
+   /* padding-top: 5px; */
    background-color: #353535;
 
    /* FONT - ROBOTO*/
@@ -61,8 +60,4 @@
    /*HOVER COLORS*/
    --link-hover-color: red;
    --button-hover-color: red;
-}
-
-.bg-primary {
-   background-color: var(--primary-color);
 }
