--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -13,7 +13,7 @@
    align-items: center;
    border-color: #eef0f2;
    border: 2px;
-   box-shadow: 0px 0px 2px black inset;
+   /* box-shadow: 0px 0px 2px black inset; */
 }
 
 .nav-ul {
@@ -47,7 +47,7 @@
    -o-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -webkit-transform: scale(1.1);
-   transform: scale(1.5);
+   transform: scale(1.1);
    transition: all ease-out 0.1s;
    width: 100%;
 }
