Note formatting change.

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -13,7 +13,8 @@
    background-image: url(../images/richmond.jpg);
    background-repeat: no-repeat;
    background-size: cover;
-   background-size: 100%;
+   background-position: right;
+   /* background-width: 500px; */
 }
 
 .about-meat-wrapper {
