--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -3,51 +3,36 @@
 
 /* NAV TREE*/
 .nav-container {
-   height: 20px;
+   display: flex;
+   flex-direction: row;
+   height: 23px;
    padding-top: 2px;
    font-size: 14px;
    display: flex;
-   flex-direction: row;
    background-color: #00161d;
    justify-content: space-between;
    align-items: center;
    border-color: #eef0f2;
-   border: 2px;
-   /* box-shadow: 0px 0px 2px black inset; */
-}
-
-.nav-ul {
-   display: flex;
-   justify-content: space-evenly;
-   flex-direction: row;
-   text-decoration: none;
-   list-style-type: none;
-   width: 100%;
 }
 
 .nav-item {
    display: flex;
    flex-direction: row;
-   justify-content: center;
-}
-
-.nav-link {
    color: hsla(333, 100%, 53%, 0.901);
-   letter-spacing: 0.2em;
-   z-index: 200;
-   transition: all 0.2s;
+   justify-content: center;
+   height: 100%;
+   width: 100%;
+   transition: all 1.4s;
 }
 
-.nav-link:hover {
-   /* text-shadow: 0px -28px 25px rgb(232, 36, 36); */
-   stroke: solid 15px;
-   transition: 0.5s;
-   -moz-transform: scale(1.1);
-   -webkit-transform: scale(1.1);
-   -o-transform: scale(1.1);
-   -ms-transform: scale(1.1);
-   -webkit-transform: scale(1.1);
-   transform: scale(1.1);
-   transition: all ease-out 0.1s;
-   width: 100%;
+.nav-item:hover {
+   display: flex;
+   color: hsla(0, 0%, 0%, 0.901);
+   background-color: hsla(333, 100%, 53%, 0.901);
+   flex-direction: row;
+   justify-content: center;
+   height: 100%;
+   transform: scale(1.3);
+   transition: all 0.1s;
+   border-radius: 1px;
 }
