--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -32,7 +32,7 @@
    flex-direction: row;
    justify-content: center;
    height: 100%;
-   transform: scale(1.3);
+   /* transform: scale(1.3); */
    transition: all 0.1s;
    border-radius: 1px;
 }
