--- a/src/css/FootBar.css
+++ b/src/css/FootBar.css
@@ -1,6 +1,7 @@
 .footer-container {
    display: flex;
    flex-direction: row;
+   justify-content: center;
    background-color: #00161d;
    /* justify-content: space-around; */
    align-items: center;
@@ -15,15 +16,18 @@
    width: 100%;
    display: flex;
    flex-direction: row;
-   justify-content: space-around;
+   justify-content: space-between;
    text-decoration: none;
    list-style-type: none;
    padding-left: 10%;
    padding-right: 10%;
 }
 
-.footer-item {
+.footer-item:hover {
    display: flex;
+   flex-direction: row;
+   justify-content: center;
+   transform: scale(1.3);
 }
 
 .footer-icon {
@@ -32,17 +36,11 @@
    color: hsla(333, 100%, 53%, 0.901);
    font-size: 20px;
    padding: 10px;
-   text-shadow: 0px 0px 1px hsla(0, 0%, 0%, 0.901);
 }
 
 .footer-icon:hover {
    cursor: pointer;
-   /* text-shadow: 0px 0px 2px rgb(0, 214, 252); */
-   -moz-transform: scale(1.15);
-   -webkit-transform: scale(1.15);
-   -o-transform: scale(1.15);
-   -ms-transform: scale(1.15);
-   -webkit-transform: scale(1.15);
    transform: scale(1.45);
-   transition: all 0.2s;
+   transition: 0.2s;
+   /* background-color: hsla(333, 100%, 53%, 0.901); */
 }
