--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,20 +1,18 @@
 .about-wrapper {
    display: flex;
    flex-direction: column;
-   padding: 15px;
-   padding-left: 15%;
-   padding-right: 15%;
+   padding: 5px;
+   padding-left: 10%;
+   padding-right: 10%;
    font-size: 18px;
    text-shadow: 0px 0px 3px ghostwhite;
    text-shadow: 0px 1px 2px rgb(0, 0, 0);
    background-color: hsla(333, 100%, 53%, 0.968);
-   /* background-color: #938274; */
    border-radius: 0px;
    background-image: url(../images/richmond.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right;
-   /* background-width: 500px; */
 }
 
 .about-meat-wrapper {
@@ -24,17 +22,22 @@
    align-items: center;
    height: 73vh;
    border-radius: 0px;
-   /* background-image: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.81), #00161dd9),
-      url(../images/IMG-8556.jpg); */
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
-   background-color: #938274e9;
+   background-color: hsla(204, 96%, 50%, 0.857);
+   background-color: #938274ee;
+
    overflow-y: scroll;
    padding: 10px;
    border: solid;
-   border-width: 0px;
-   border-color: black;
+   border-left-width: 40px;
+   border-right-width: 40px;
+   border-top-width: 0px;
+   border-bottom-width: 0px;
+
+   border-color: #00161d;
+   border-radius: 2px;
    box-shadow: 0px 4px 5px black;
    transition: 0.3s;
    text-shadow: 0px 0px 2px rgb(0, 0, 0);
