--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,5 +1,3 @@
-@import "./Global.css";
-
 .nav-container {
    display: flex;
    flex-direction: row;
@@ -10,14 +8,14 @@
    font-size: 15px;
    font-weight: 400px;
    display: flex;
-   background-color: #00161d;
+   background-color: var(--dark);
    align-items: center;
 }
 
 .nav-item {
    display: flex;
    flex-direction: row;
-   color: hsla(333, 100%, 53%, 0.901);
+   color: var(--vibrant);
    justify-content: center;
    height: 100%;
    width: 100%;
@@ -29,7 +27,7 @@
 .nav-item:hover {
    display: flex;
    color: hsla(0, 0%, 0%, 0.901);
-   background-color: hsla(333, 100%, 53%, 0.901);
+   background-color: var(--vibrant);
    flex-direction: row;
    justify-content: center;
    height: 100%;
