UPDATED ongoing changes to global css an dassociated var.

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -26,7 +26,7 @@
 
 .nav-item:hover {
    display: flex;
-   color: hsla(0, 0%, 0%, 0.901);
+   color: var(--dark);
    background-color: var(--vibrant);
    flex-direction: row;
    justify-content: center;
