Changed highlight color

--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -26,6 +26,7 @@
    /* _________________________________________________________________| COLORS */
    --dark: hsla(194, 100%, 6%, 1);
    --medium: hsla(27, 13%, 52%, 1);
-   --vibrant: hsla(333, 100%, 53%, 0.901);
+   --vibrant: hsla(194, 79%, 45%, 0.974);
+   --og-vibrant: hsla(333, 100%, 53%, 0.901);
    --cultured: hsla(210, 13%, 94%, 1);
 }
