--- a/src/css/About.css
+++ b/src/css/About.css
@@ -21,16 +21,10 @@
    justify-content: top;
    align-items: center;
    height: 73vh;
-   border-radius: 0px;
-   background-position: center;
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-color: hsla(204, 96%, 50%, 0.857);
    background-color: #938274ee;
-
    overflow-y: scroll;
    padding: 10px;
-   border: solid;
+   /* border: solid; */
    border-left-width: 40px;
    border-right-width: 40px;
    border-top-width: 0px;
@@ -44,19 +38,19 @@
 }
 
 .about-h1 {
-   color: #eef0f2;
+   color: var(--cultured);
    display: flex;
    justify-content: left;
    flex-direction: row;
    color: eef0f2;
-   background-color: #00161d;
+   background-color: var(--dark);
    width: 100%;
    padding-left: 10px;
    padding-right: 10px;
 }
 
 .about-p {
-   color: #eef0f2;
+   color: var(--cultured);
    padding: 5px;
 }
 
@@ -75,11 +69,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
-   background: hsla(333, 100%, 53%, 1);
+   background: var(--vibrant);
    height: 10px;
    border: 1px solid rgb(0, 0, 0);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-   background: rgba(255, 15, 123, 0.713);
+   background: var(--cultured);
 }
