--- a/src/css/FootBar.css
+++ b/src/css/FootBar.css
@@ -31,8 +31,8 @@
 
 .footer-icon {
    display: flex;
-   color: #eef0f2;
-   color: hsla(333, 100%, 53%, 0.901);
+   color: var(--cultured);
+   color: var(--vibrant);
    font-size: 20px;
    padding: 10px;
 }
